--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iav2",
+  "name": "inspector-v2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -28,7 +28,7 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
-    "naive-ui": "^2.33.4",
+    "naive-ui": "^2.34.3",
     "typescript": "~4.1.5"
   }
 }
